tests/snapshots/e2e__e2e_nested_object_json__pseudo__n10.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "a": {
    "b": [
      "…"
      …
    ],
    "c": 1
  },
  "d": [
    {
      "k": "…"
    },
    {
      "k": "…"
    }
  ]
}
